experiences and achievements

--- a/index.html
+++ b/index.html
@@ -27,36 +27,36 @@
                     </div>
                 </div>
             </div>
-            <img src="./image/hero.png">
+            <img src="./assets/hero.png">
         </div>
         <div id="#about">
-            <h1 class="header-main">< Organizations /></h1>
-            <div class="organizations">
-                <div class="orgs">
-                    <div class="org-image">
-                        <img src="./image/logo-eisd.png">
+            <div class="about-section">
+                <h1 class="header-main">< Organizations /></h1>
+                <div class="container-list">
+                    <div class="container-image">
+                        <img src="./assets/logo-eisd.png">
                     </div>
-                    <div class="org-detail">
-                        <p class="org-name">EISD Laboratory</p>
-                        <div class="roles">
-                            <div class="detail-role">
-                                <div class="role-date">
-                                    <p class="role">Secretary and Treasurer</p>
+                    <div class="container-detail">
+                        <p class="container-name">EISD Laboratory</p>
+                        <div class="container-title">
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p class="title">Secretary and Treasurer</p>
                                     <p>December 2024 - Present</p>
                                 </div>
-                                <div class="desc-role">
+                                <div class="desc-title">
                                     <ul>
                                         <li>Maintain and organize all laboratory records, meeting minutes, and reports.</li>
                                         <li>Maintain accurate financial records of laboratory funds, including income and expenses.</li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="detail-role">
-                                <div class="role-date">
-                                    <p class="role">Staff of Enabler Division</p>
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p class="title">Staff of Enabler Division</p>
                                     <p>September 2024 - December 2024</p>
                                 </div>
-                                <div class="desc-role">
+                                <div class="desc-title">
                                     <ul>
                                         <li>Monitoring the division's work programs within the ESD Laboratory.</li>
                                         <li>Collaborating with external parties.</li>
@@ -66,43 +66,43 @@
                         </div>
                     </div>
                 </div>
-                <div class="orgs">
-                    <div class="org-image">
-                        <img src="./image/logo-cci.png">
+                <div class="container-list">
+                    <div class="container-image">
+                        <img src="./assets/logo-cci.png">
                     </div>
-                    <div class="org-detail">
-                        <p class="org-name">Central Computer Improvement</p>
-                        <div class="roles">
-                            <div class="detail-role">
-                                <div class="role-date">
-                                    <p class="role">Vice President</p>
+                    <div class="container-detail">
+                        <p class="container-name">Central Computer Improvement</p>
+                        <div class="container-title">
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p class="title">Vice President</p>
                                     <p>December 2024 - Present</p>
                                 </div>
-                                <div class="desc-role">
+                                <div class="desc-title">
                                     <ul>
                                         <li>Oversee the execution of plans, strategies, and initiatives.</li>
                                         <li>Contribute to decision-making, problem-solving, and strategic planning.</li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="detail-role">
-                                <div class="role-date">
-                                    <p class="role">Quality Assurance</p>
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p class="title">Quality Assurance</p>
                                     <p>March 2024 - December 2024</p>
                                 </div>
-                                <div class="desc-role">
+                                <div class="desc-title">
                                     <ul>
                                         <li>Managing tasks using Linear for website testing.</li>
                                         <li>Utilizing Postman for website testing.</li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="detail-role">
-                                <div class="role-date">
-                                    <p class="role">Member of Website Development Division</p>
+                            <div class="title-role">
+                                <div class="title-date">
+                                    <p class="title">Member of Website Development Division</p>
                                     <p>December 2023 - September 2024</p>
                                 </div>
-                                <div class="desc-role">
+                                <div class="desc-title">
                                     <ul>
                                         <li>Learning the basics of web programming, such as HTML, CSS, and JavaScript.</li>
                                         <li>Developing a final project within the division.</li>
@@ -112,31 +112,31 @@
                         </div>
                     </div>
                 </div>
-                <div class="orgs">
-                    <div class="org-image">
-                        <img src="./image/logo-tencom.png">
+                <div class="container-list">
+                    <div class="container-image">
+                        <img src="./assets/logo-tencom.png">
                     </div>
-                    <div class="org-detail">
-                        <p class="org-name">Tentor Community HMSI</p>
-                        <div class="roles">
-                            <div class="detail-role">
-                                <div class="role-date">
-                                    <p class="role">Tutor</p>
+                    <div class="container-detail">
+                        <p class="container-name">Tentor Community HMSI</p>
+                        <div class="container-title">
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p class="title">Tutor</p>
                                     <p>September 2024 - Present</p>
                                 </div>
-                                <div class="desc-role">
+                                <div class="desc-title">
                                     <ul>
                                         <li>Serving as a tutor for Information Systems students' courses.</li>
                                         <li>Create a supportive and interactive learning environment.</li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="detail-role">
-                                <div class="role-date">
-                                    <p class="role">Staff of Event Division</p>
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p class="title">Staff of Event Division</p>
                                     <p>September 2024 - Present</p>
                                 </div>
-                                <div class="desc-role">
+                                <div class="desc-title">
                                     <ul>
                                         <li>Assist in planning, organizing, and executing tasks within the division.</li>
                                         <li>Maintain communication and coordination with other divisions or departments.</li>
@@ -146,6 +146,93 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="about-section">
+                <h1 class="header-main">< Experiences /></h1>
+                <div class="container-list">
+                    <div class="container-image">
+                        <img src="./assets/ui-digitalk.png">
+                    </div>
+                    <div class="container-detail">
+                        <p class="container-name">UI/UX Competition of Digitalk by University of Indonesia</p>
+                        <div class="container-title">
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p class="title">Participant</p>
+                                    <p>July 2024 - August 2024</p>
+                                </div>
+                                <div class="desc-title">
+                                    <ul>
+                                        <li>Applied design thinking methodologies to develop innovative solutions.</li>
+                                        <li>Conducted user research to address local issues, with a focus on SDGs-driven approaches.</li>
+                                        <li>Designed a functional application prototype using Figma.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+                <div class="container-list">
+                    <div class="container-image">
+                        <img src="./assets/logo-gdsc.png">
+                    </div>
+                    <div class="container-detail">
+                        <p class="container-name">Google Hackfes 2023 by Google Developer Student Clubs</p>
+                        <div class="container-title">
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p class="title">Participant</p>
+                                    <p>December 2023 - March 2024</p>
+                                </div>
+                                <div class="desc-title">
+                                    <ul>
+                                        <li>Played the role of a Hustler, leading business strategy initiatives.</li>
+                                        <li>Utilized the Business Model Canvas to formulate effective solutions for real-world challenges.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>                  
+            </div>
+            <div class="about-section">
+                <h1 class="header-main">< Achievements /></h1>
+                <div class="container-list">
+                    <div class="container-image">
+                        <img src="./assets/logo-cci.png">
+                    </div>
+                    <div class="container-detail">
+                        <p class="container-name">The Most Inspiring Person – Central Computer Improvement</p>
+                        <div class="container-title">
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p>September 2024</p>
+                                </div>
+                                <div class="desc-title">
+                                    <p>Awarded as the 4th Winner in Business Plan Competition</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="container-list">
+                    <div class="container-image">
+                        <img src="./assets/digix-unpad.png">
+                    </div>
+                    <div class="container-detail">
+                        <p class="container-name">Finalist for Business Plan Competition of DigiX by Padjadjaran University</p>
+                        <div class="container-title">
+                            <div class="detail-title">
+                                <div class="title-date">
+                                    <p>September 2024</p>
+                                </div>
+                                <div class="desc-title">
+                                    <p>Awarded as the 4th Winner in Business Plan Competition</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>                   
             </div>
         </div>
     </div>
