--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="navbar">
         <a class="active nav-item" href="#">Home</a>
         <a class="nav-item" href='#about'>About</a>
-        <a class="nav-item" href="#">Projects</a>
+        <a class="nav-item" href="#projects">Projects</a>
         <a class="nav-item" href="#">Contact</a>
         <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/1wBB-nP212Fb6W8fA8bnSfvFpbFgXyA1W/view?usp=sharing">Resume</a>
     </div>
@@ -31,7 +31,7 @@
         </div>
         <div id="#about">
             <div class="about-section">
-                <h1 class="header-main">< Organizations /></h1>
+                <h1 class="header-main" id="header-main">< Organizations /></h1>
                 <div class="container-list">
                     <div class="container-image">
                         <img src="./assets/logo-eisd.png">
@@ -97,7 +97,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="title-role">
+                            <div class="detail-title">
                                 <div class="title-date">
                                     <p class="title">Member of Website Development Division</p>
                                     <p>December 2023 - September 2024</p>
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="about-section">
-                <h1 class="header-main">< Experiences /></h1>
+                <h1 class="header-main" id="header-main">< Experiences /></h1>
                 <div class="container-list">
                     <div class="container-image">
                         <img src="./assets/ui-digitalk.png">
@@ -196,7 +196,7 @@
                 </div>                  
             </div>
             <div class="about-section">
-                <h1 class="header-main">< Achievements /></h1>
+                <h1 class="header-main" id="header-main">< Achievements /></h1>
                 <div class="container-list">
                     <div class="container-image">
                         <img src="./assets/logo-cci.png">
@@ -233,6 +233,47 @@
                         </div>
                     </div>
                 </div>                   
+            </div>
+        </div>
+        <div id="#projects">
+            <h1 class="header-main" id="header-main">< Projects /></h1>
+            <div class="project-list">
+                <div class="project-card">
+                    <img src="./assets/web-cci.jpeg" class="project-image">
+                    <div class="project-detail">
+                        <div class="project-title">
+                            <p class="title">Web Profile CCI</p>
+                        </div>
+                        <p class="project-desc">Menjadi seorang Quality Assurance (QA) yang mengetes API menggunakan Postman memastikan bahwa setiap endpoint API berfungsi sesuai spesifikasi dengan menguji berbagai metode HTTP seperti GET, POST, PUT, dan DELETE. QA memvalidasi respons API, termasuk kode status, format data (JSON/XML), dan output yang diharapkan.</p>
+                    </div>
+                    <div class="tech-used">
+                        <img src="./assets/logo-postman.png">
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="./assets/nusacerita.png" class="project-image">
+                    <div class="project-detail">
+                        <div class="project-title">
+                            <p class="title">Web Profile CCI</p>
+                        </div>
+                        <p class="project-desc">Menjadi seorang Quality Assurance (QA) yang mengetes API menggunakan Postman memastikan bahwa setiap endpoint API berfungsi sesuai spesifikasi dengan menguji berbagai metode HTTP seperti GET, POST, PUT, dan DELETE. QA memvalidasi respons API, termasuk kode status, format data (JSON/XML), dan output yang diharapkan.</p>
+                    </div>
+                    <div class="tech-used">
+                        <img src="./assets/figma-logo.png">
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="./assets/finpro-dpp.png" class="project-image">
+                    <div class="project-detail">
+                        <div class="project-title">
+                            <p class="title">Web Profile CCI</p>
+                        </div>
+                        <p class="project-desc">Menjadi seorang Quality Assurance (QA) yang mengetes API menggunakan Postman memastikan bahwa setiap endpoint API berfungsi sesuai spesifikasi dengan menguji berbagai metode HTTP seperti GET, POST, PUT, dan DELETE. QA memvalidasi respons API, termasuk kode status, format data (JSON/XML), dan output yang diharapkan.</p>
+                    </div>
+                    <div class="tech-used">
+                        <img src="./assets/figma-logo.png">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
