--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fadia RY | Portofolio </title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Plus+Jakarta+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
         <a class="active nav-item" href="#">Home</a>
         <a class="nav-item" href='#about'>About</a>
         <a class="nav-item" href="#projects">Projects</a>
-        <a class="nav-item" href="#">Contact</a>
+        <a class="nav-item" href="#contact">Contact</a>
         <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/1wBB-nP212Fb6W8fA8bnSfvFpbFgXyA1W/view?usp=sharing">Resume</a>
     </div>
     <div class="main">
@@ -29,7 +30,7 @@
             </div>
             <img src="./assets/hero.png">
         </div>
-        <div id="#about">
+        <div id="about">
             <div class="about-section">
                 <h1 class="header-main" id="header-main">< Organizations /></h1>
                 <div class="container-list">
@@ -148,54 +149,6 @@
                 </div>
             </div>
             <div class="about-section">
-                <h1 class="header-main" id="header-main">< Experiences /></h1>
-                <div class="container-list">
-                    <div class="container-image">
-                        <img src="./assets/ui-digitalk.png">
-                    </div>
-                    <div class="container-detail">
-                        <p class="container-name">UI/UX Competition of Digitalk by University of Indonesia</p>
-                        <div class="container-title">
-                            <div class="detail-title">
-                                <div class="title-date">
-                                    <p class="title">Participant</p>
-                                    <p>July 2024 - August 2024</p>
-                                </div>
-                                <div class="desc-title">
-                                    <ul>
-                                        <li>Applied design thinking methodologies to develop innovative solutions.</li>
-                                        <li>Conducted user research to address local issues, with a focus on SDGs-driven approaches.</li>
-                                        <li>Designed a functional application prototype using Figma.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>  
-                <div class="container-list">
-                    <div class="container-image">
-                        <img src="./assets/logo-gdsc.png">
-                    </div>
-                    <div class="container-detail">
-                        <p class="container-name">Google Hackfes 2023 by Google Developer Student Clubs</p>
-                        <div class="container-title">
-                            <div class="detail-title">
-                                <div class="title-date">
-                                    <p class="title">Participant</p>
-                                    <p>December 2023 - March 2024</p>
-                                </div>
-                                <div class="desc-title">
-                                    <ul>
-                                        <li>Played the role of a Hustler, leading business strategy initiatives.</li>
-                                        <li>Utilized the Business Model Canvas to formulate effective solutions for real-world challenges.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>                  
-            </div>
-            <div class="about-section">
                 <h1 class="header-main" id="header-main">< Achievements /></h1>
                 <div class="container-list">
                     <div class="container-image">
@@ -235,7 +188,7 @@
                 </div>                   
             </div>
         </div>
-        <div id="#projects">
+        <div id="projects">
             <h1 class="header-main" id="header-main">< Projects /></h1>
             <div class="project-list">
                 <div class="project-card">
@@ -254,9 +207,9 @@
                     <img src="./assets/nusacerita.png" class="project-image">
                     <div class="project-detail">
                         <div class="project-title">
-                            <p class="title">Web Profile CCI</p>
+                            <p class="title">NusaCerita</p>
                         </div>
-                        <p class="project-desc">Menjadi seorang Quality Assurance (QA) yang mengetes API menggunakan Postman memastikan bahwa setiap endpoint API berfungsi sesuai spesifikasi dengan menguji berbagai metode HTTP seperti GET, POST, PUT, dan DELETE. QA memvalidasi respons API, termasuk kode status, format data (JSON/XML), dan output yang diharapkan.</p>
+                        <p class="project-desc">Menjadi UI/UX Designer dalam porject NusaCerita bertugas merancang pengalaman dan antarmuka pengguna yang intuitif, menarik, serta mendukung pembelajaran keberagaman Indonesia dengan fitur interaktif berupa AI dan AR. esain aplikasi ini diharapkan mampu meningkatkan pemahaman pengguna terhadap keberagaman budaya Indonesia.</p>
                     </div>
                     <div class="tech-used">
                         <img src="./assets/figma-logo.png">
@@ -266,14 +219,35 @@
                     <img src="./assets/finpro-dpp.png" class="project-image">
                     <div class="project-detail">
                         <div class="project-title">
-                            <p class="title">Web Profile CCI</p>
+                            <p class="title">Final Project DPP</p>
                         </div>
-                        <p class="project-desc">Menjadi seorang Quality Assurance (QA) yang mengetes API menggunakan Postman memastikan bahwa setiap endpoint API berfungsi sesuai spesifikasi dengan menguji berbagai metode HTTP seperti GET, POST, PUT, dan DELETE. QA memvalidasi respons API, termasuk kode status, format data (JSON/XML), dan output yang diharapkan.</p>
+                        <p class="project-desc">Menjadi UI/UX Designer dalam proyek tugas besar mata kuliah DPP bertugas merancang pengalaman dan antarmuka aplikasi kesehatan yang intuitif, efisien, dan mudah diakses. Memastikan navigasi desain aplikasi yang jelas dalam fitur seperti konsultasi online dan pemantauan kesehatan untuk membantu pengguna.</p>
                     </div>
                     <div class="tech-used">
                         <img src="./assets/figma-logo.png">
                     </div>
                 </div>
+            </div>
+        </div>
+        <div id="contact">
+            <h1 class="header-main" id="header-main">< Contact /></h1>
+            <div class="contact-list">
+            <div class="contact-card">
+                <img src="./assets/logo-instagram.png">
+                <a href="https://www.instagram.com/fadiarizqa/">@fadiarizqa</a>
+            </div>
+            <div class="contact-card">
+                <img src="./assets/logo-linkedin.png">
+                <a href="https://www.linkedin.com/in/fadiarizqa/">@fadiarizqa</a>
+            </div>
+            <div class="contact-card">
+                <img src="./assets/logo-github.png">
+                <a href="https://github.com/fadiarizqa">@fadiarizqa</a>
+            </div>
+            <div class="contact-card">
+                <img src="./assets/logo-gmail.png">
+                <a href="mailto:fadiarizqa@gmail.com">fadiarizqa@gmail.com</a>
+            </div>
             </div>
         </div>
     </div>
